# genius-lyric-scraper

./: pyproject.toml
src/genius_lyric_scraper/: scraper.py
tests/: test_scraper.py
